# How_to_optimize_in_GPU

./: .clang-format  .clangd  CMakeLists.txt  main.cu  new_test.cu  test.cu
.cache/clangd/index/: main.cu.6174610EC68CED1C.idx
mykernel/: 2_sgemm.cu
reduce/: reduce_v7_shuffle.cu
spmm/: spmm.cu
todo/: 1_softmax.cuh
